# OpenGL-Series

./: CMakeLists.txt  README.md  vcpkg.json
include/: bufferLayout.hpp  glAssert.hpp  indexBuffer.hpp  renderer.hpp  shader.hpp  shaderCompiler.hpp  texture.hpp  vertexArray.hpp  vertexBuffer.hpp
include/tests/: test.hpp  testClearColor.hpp  testTexture2D.hpp
res/shaders/: basic.shader
src/: bufferLayout.cpp  glAssert.cpp  indexBuffer.cpp  main.cpp  renderer.cpp  shader.cpp  shaderCompiler.cpp  texture.cpp  vertexArray.cpp  vertexBuffer.cpp
src/tests/: test.cpp  testClearColor.cpp  testMenu.cpp  testTexture2D.cpp
